# FileUploader

./: .env.example  .gitignore  Cargo.toml  DataBaseDoc.md
_docs/: Default_populate.sql  esquema_completo.erd  gen_db.sql
docs/: gen_db.sql  populate_COLUMN_TYPE.sql
macros/: Cargo.toml
macros/src/: ddb.rs  helper.rs  lib.rs  python.rs
macros/tests/: python.rs
queries/: _test.sql
src/: lib.rs  macros.rs  main.rs  routes.rs
src/api/: mod.rs  root.rs  sheet.rs
src/database/: db_traits.rs  mod.rs
src/database/tables/: column_type.rs  mod.rs
src/ddb/: context.rs  db_traits.rs  mod.rs  tiberius_interface.rs
src/ddb/context/: db_types.rs  functions.rs  mod.rs  tiberius_interface.rs  utils.rs
src/ddb/context/db_types/: chain.rs  mod.rs  sql_parameters.rs  sql_value.rs
src/ddb/tables/: board.rs  column_type.rs  custom_sql_script.rs  group.rs  hist_group.rs  hist_sheet.rs  hist_sheet_meta_data.rs  hist_uploader_permission.rs  manager_permission.rs  mod.rs  profile.rs  profile_groups.rs  sheet.rs  sheet_meta_data.rs  sheet_used_by_board.rs  upload.rs  uploader_permission.rs  worker.rs
src/model/: mod.rs  sheet.rs  sheet_meta_data.rs
src/repository/: mod.rs
src/repository/database/: column_type.rs  mod.rs
src/service/: mod.rs
