[package]
name = "file-uploader"
version = "0.1.0"
edition = "2024"

[dependencies]

# Local dependencies
macros = { path = "macros" }

# Main dependency, back bone of a web server
actix-web = "4.12.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Logging
env_logger = "0.11.8"
log = "0.4.29"

# Easy to string method to enums
derive_more = { version = "2.1.0", features = ["full"] }

# For JWT
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# Generate UUID
uuid = { version = "1.19.0", features = ["v4"] }

# Load config
dotenvy = "0.15.7"  # Load plain env files to env var
# config = "0.15"  # Load config files into struct

# Easy async for rust
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
futures = "0.3.31"

# Erro handling
anyhow = "1.0.100"

# Date structs
chrono = { version = "0.4.42", features = ["serde"] }

# Data base communication
# sqlx = { version = "0.8.2", features = [] } # No longer supports MSSQL
tiberius = { version = "0.12.3", features = ["tds73", "rustls", "chrono"], default-features = false } # Raw MSSQL connection
